potential update notifier implementation